[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/enemy/Magician Skeleton/All Parts/fire 2.png" type="Texture" id=1]
[ext_resource path="res://src/Actor/Enemy/MagicianSkeleton/MagicBall.gd" type="Script" id=2]
[ext_resource path="res://assets/enemy/Magician Skeleton/All Parts/fire 3.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Destroy",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 52.1735
height = 72.2504

[node name="MagicBall" type="RigidBody2D"]
collision_layer = 0
collision_mask = 17
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="SpriteMagic" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "Destroy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_MagicBall_body_entered"]
[connection signal="animation_finished" from="SpriteMagic" to="." method="_on_SpriteMagic_animation_finished"]
